MyDev Project/src/objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Club_Captain__c</fullName>
        <label>Club Captain</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Team_Size__c</fullName>
        <label>Current Team Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Team_Location__c</fullName>
        <description>location where this  team resides</description>
        <label>Team Location</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wage_Budget__c</fullName>
        <label>Wage Budget</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>